--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,8 +1,6 @@
 body {
-    background-image: url(https://www.digient.in/images/2020/07/07/banners-sub/flightbook.jpg);
+    background-color: #0b5371;
     text-align: center;
-    background-size: cover;
-    height: 100vh;
     
 }
 
