--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,7 @@
         <div class="container-fluid">
             <div class="navbar-header">
                 
-                <a class="navbar-ban" href="/"><center>Project: Flight Price Prediction</center></a>
+                <a class="navbar-ban" href="/"><center>Project: Flight Price Prediction Airways</center></a>
             
 
             </div>
@@ -161,7 +161,7 @@
 
         <br>
         <br>
-        <h3 style="color: white;">{{ prediction_text }}</h3>
+        <h3>{{ prediction_text }}</h3>
 
         <br>
         <br>
